fixed fade showing when downloaded repos aren't collapsed, updated metric status table for less space

--- a/frontend/app/styles/ghdata.styl
+++ b/frontend/app/styles/ghdata.styl
@@ -28,7 +28,6 @@ header .search
   text-decoration: none
   color: #777
 
-
 #logo
   display: inline-block
   margin-top: 0px
@@ -178,7 +177,9 @@ section.status
   max-height: 100px
 }
 
-
+th, td {
+    padding: 0;
+}
 
 cite.metric
   display: block;
